--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,11 @@ body {
   height: 100px;
   background: orange;
 
-  transition-property: border-radius;
+  transition-property: transform;
   transition-duration: 1s;
 }
 
 .box:hover {
-  border-radius: 50%;
+  /* transform: translate(50px, 20px); */
+  transform: rotate(30deg);
 }
