--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
 
 .box:hover {
   /* transform: translate(50px, 20px); */
-  /* transform: scale(0.5, 2); */
+  transform: scale(0.5, 2);
 
-  transform: rotate(30deg);
+  /* transform: rotate(30deg); */
 }
