--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,9 @@ body {
 
   transition-property: transform;
   transition-duration: 1s;
-  transform-origin: top left;
 }
 
 .box:hover {
-  /* transform: translate(50px, 20px); */
-  transform: scale(0.5, 2);
-
-  /* transform: rotate(30deg); */
+  transform: translateX(30px);
+  background: skyblue;
 }
