--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ body {
   height: 100px;
   background: orange;
 
-  transition-property: transform;
+  transition-property: transform, background;
+  /* transition-property: all; 全部のプロパティを一気に遷移 */
   transition-duration: 1s;
 }
 
